<resources>
    <string name="app_name">Educational App</string>
    <string name="submit_button">Submit</string>
    <string name="title_educational_app_question">Educational App (%1$d/%2$d)</string>
    <string name="logo">Logo</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your Name:</string>
    <string name="play"><![CDATA[Play ->]]></string>
    <string name="welcome_to_quiz_time">Welcome to Quiz Time</string>
    <string name="quiz_image">Quiz image</string>
    <string name="save">Save</string>
    <string name="_5">5</string>
    <string name="_10">10</string>
    <string name="toggle_dark_mode">Toggle dark mode</string>
    <string name="toggle_music">Toggle music</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="music">Music</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="user_stats">User_stats</string>
    <string name="user_stats_will_appear_here">User Stats will appear here</string>
    <string name="name_user">Name</string>
    <string name="score">Score</string>
    <string name="user_1">User-1</string>
    <string name="Score_5">5</string>
    <string name="quote_from_internet">Quote from Internet</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
</resources>
